--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
@@ -18,5 +20,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
