--- a/part9/first-steps/package.json
+++ b/part9/first-steps/package.json
@@ -7,7 +7,8 @@
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
     "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
